@@ -1,7 +1,15 @@
+2003-05-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/gplt_x11.c (main) [!DEBUG]: Redirect stderr to /dev/null on
+ 	entry to -persist mode event loop.  Avoids hanging emacs if you
+ 	run "gnuplot -persist" via shell-command.  In DEBUG mode, leave it
+ 	alone.
+
 2003-05-19  Ethan Merritt <merritt@u.washington.edu>
 
 	* term/svg.trm: Make pattern fill sequence consistent with other
-	terminal types. Fix off-by-one y coordinate error in box fill code.
+ 	terminal types. Fix off-by-one y coordinate error in box fill
+ 	code.
 
 2003-05-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
